--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,21 +4,16 @@ cmake_policy(SET CMP0015 NEW)
 project (${PROJECT}) 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/SFML/cmake/Modules")
 
-set(BOOST_ROOT ./Boost)
-find_package(BOOST COMPONENTS filesystem REQUIRED)
-set(BOOST_INCLUDE_DIRS ./Boost)
-set(BOOST_LIBRARY_DIRS ./Boost/lib)
+set(BOOST_ROOT Boost)
+find_package(Boost COMPONENTS filesystem REQUIRED)
 
-set(SFML_DIR ./SFML)
+set(SFML_ROOT SFML)
 find_package(SFML COMPONENTS audio REQUIRED)
-set(SFML_INCLUDE_DIRS ./SFML/include)
-set(SFML_LIBRARY_DIRS ./SFML/lib)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11 -Wall")
 
 set (HEADERS 
 	SSAD1/Playable.h
 	SSAD1/Player.h
+	SSAD1/PlayerCLI.h
 	SSAD1/Playlist.h
 	SSAD1/PlaylistIterator.h
 	SSAD1/PlaylistIteratorImpl.h
@@ -31,6 +26,7 @@ set (HEADERS
 set (SOURCES 
 	SSAD1/Playable.cpp
 	SSAD1/Player.cpp
+	SSAD1/PlayerCLI.cpp
 	SSAD1/Playlist.cpp
 	SSAD1/PlaylistIterator.cpp
 	SSAD1/PlaylistIteratorImpl.cpp
@@ -41,10 +37,10 @@ set (SOURCES
 	SSAD1/TrackListPosition.cpp
 	SSAD1/main.cpp)
 
-include_directories(${BOOST_INCLUDE_DIR})
+include_directories(${Boost_INCLUDE_DIR})
 include_directories(${SFML_INCLUDE_DIR})
 
-link_directories(${BOOST_LIBRARY_DIRS})
+link_directories(${Boost_LIBRARY_DIRS})
 link_directories(${SFML_LIBRARY_DIRS})
 
 add_executable (${PROJECT} ${HEADERS} ${SOURCES})
